argo-events/overlays/production/ingress-webhook-eventsource.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-eventsource
  namespace: argo-events
spec:
  rules:
  - host: webhook.installer.119-13-93-105.nip.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: webhook-eventsource
            port: 
              number: 12000
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
  namespace: argo-events
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: webhook
